# FilterListManager

./: .gitattributes  .gitignore  .markdownlint.json  .rusty-hook.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  Package.swift  README.md  clippy.toml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/cli_app/: fill_database.rs  mod.rs  test.rs
crates/cli/src/cli_app/migrations/: file_matcher.rs  migration_processor.rs  migration_queries.rs  mod.rs
crates/ffi/: AGWinFLM.rc  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml  uniffi.toml
crates/ffi/resources/: AGWinFLM.rc
crates/ffi/src/: buf.yaml  build_native_ffi_assets.rs  flm_ffi.udl  lib.rs  native_interface.rs  outer_error.rs  result.rs  top_level.rs
crates/ffi/src/apple/flmctest/: Test-Bridging-Header.h
crates/ffi/src/apple/flmctest/flmctest/: main.swift
crates/ffi/src/apple/flmctest/flmctest.xcodeproj/: project.pbxproj
crates/ffi/src/apple/flmctest/protos/: configuration.pb.swift  filters.pb.swift  flm_interface.pb.swift  outer_error.pb.swift
crates/ffi/src/headers/: flm.h
crates/ffi/src/models/: mod.rs
crates/ffi/src/native_interface/: flm_call_protobuf.rs  mod.rs
crates/ffi/src/protobuf/: configuration.proto  filters.proto  flm_interface.proto  misc_models.proto  outer_error.proto
crates/ffi/src/protobuf_generated/: casts.rs  filter_list_manager.rs  mod.rs
crates/ffi/tests/: integration_test.rs
crates/filter-list-manager/: .gitignore  AGWinFLM.rc  CHANGELOG.md  Cargo.toml  README.md
crates/filter-list-manager/resources/sql/: schema.sql
crates/filter-list-manager/resources/sql/migrations/: 001-migration.sql  002-migration.sql  003-migration.sql  004-migration.sql  005-migration.sql  006-migration.sql  007-migration.sql
crates/filter-list-manager/src/: lib.rs
crates/filter-list-manager/src/filters/: mod.rs  parser.rs
crates/filter-list-manager/src/filters/indexes/: index_consistency_checker.rs  indexes_processor.rs  mod.rs
crates/filter-list-manager/src/filters/indexes/entities/: index_entities.rs  index_localisation_entities.rs  mod.rs
crates/filter-list-manager/src/filters/parser/: boolean_expression_parser.rs  checksum_validator.rs  conditional_directives_processor.rs  filter_collector.rs  filter_compiler.rs  filter_cursor.rs  include_processor.rs  is_rule_detector.rs  parser_error.rs  paths.rs  rule_lines_collector.rs
crates/filter-list-manager/src/filters/parser/collectors/: default_filter_collector.rs  line_processor.rs  mod.rs  streaming_filter_collector.rs
crates/filter-list-manager/src/filters/parser/diff_updates/: batch_patches_container.rs  diff_directives.rs  mod.rs  process_diff_path.rs  validate_patch.rs
crates/filter-list-manager/src/filters/parser/filter_contents_provider/: diff_path_provider.rs  mod.rs  (+3 more)
crates/filter-list-manager/src/io/: content_checkers.rs  error.rs  fetch_by_schemes.rs  mod.rs  url_schemes.rs
crates/filter-list-manager/src/io/http/: async_client.rs  blocking_client.rs  error.rs  mod.rs
crates/filter-list-manager/src/manager/: filter_list_manager_impl.rs  filter_lists_builder.rs  full_filter_list_builder.rs  mod.rs  update_filters_action.rs
crates/filter-list-manager/src/manager/managers/: configuration_update_manager.rs  db_manager.rs  filter_group_manager.rs  filter_manager.rs  filter_metadata_grabber.rs  filter_tag_manager.rs  filter_update_manager.rs  integrity_control_manager.rs  mod.rs  rules_list_manager.rs  streaming_rules_manager.rs
crates/filter-list-manager/src/manager/models/: active_rules_info.rs  active_rules_info_raw.rs  disabled_rules_raw.rs  filter_group.rs  filter_list_metadata.rs  filter_list_metadata_with_body.rs  filter_list_rules.rs  filter_list_rules_raw.rs  filter_tag.rs  flm_error.rs  full_filter_list.rs  mod.rs  pull_metadata_result.rs  rules_count_by_filter.rs  stored_filter_metadata.rs  update_result.rs
crates/filter-list-manager/src/storage/: blob.rs  constants.rs  database_configuration_holder.rs  database_path_holder.rs  database_status.rs  db_bootstrap.rs  db_file_utils.rs  error.rs  init_schema.rs  migrations.rs  mod.rs  utils.rs
crates/filter-list-manager/src/storage/blob/: blob_handle_impl.rs  blob_reader.rs  buffered_blob_reader.rs  filter_stream.rs  mod.rs
crates/filter-list-manager/src/storage/db_connection_manager/: connect.rs  database_name.rs  mod.rs
crates/filter-list-manager/src/storage/entities/: constants.rs  db_metadata_entity.rs  diff_update_entity.rs  filter_entity.rs  filter_filter_tag_entity.rs  filter_group_entity.rs  filter_inner_flag_entity.rs  filter_locale_entity.rs  filter_tag_entity.rs  hydrate.rs  mod.rs  rules_list_entity.rs
crates/filter-list-manager/src/storage/repositories/: db_metadata_repository.rs  db_schema_repository.rs  diff_updates_repository.rs  filter_filter_tag_repository.rs  filter_group_repository.rs  filter_includes_repository.rs  filter_locale_repository.rs  filter_repository.rs  filter_tag_repository.rs  mod.rs  rules_list_repository.rs
crates/filter-list-manager/src/storage/services/: constants.rs  filter_service.rs  mod.rs  rules_list_service.rs
crates/filter-list-manager/src/storage/sql_generators/: mod.rs  operator.rs
crates/filter-list-manager/src/test_utils/: indexes_fixtures.rs  mod.rs  tests_db.rs  tests_fixtures.rs
crates/filter-list-manager/src/utils/: integrity.rs  memory.rs  mod.rs  string.rs
crates/filter-list-manager/src/utils/iterators/: lines_with_terminator.rs  mod.rs
crates/filter-list-manager/src/utils/parsing/: mod.rs
crates/filter-list-manager/tests/fixtures/: 1.txt  filters.json  small_pseudo_custom_filter.txt  small_pseudo_custom_filter_rules_test.txt  small_pseudo_custom_filter_with_aliases.txt  test_checksum.txt
crates/filter-list-manager/tests/fixtures/batch/: batch_v1.0.0-s-1700045842-3600.patch
crates/filter-list-manager/tests/fixtures/includes/: included_part.txt  included_part2.txt  included_part3.txt  main.txt
crates/filter-list-manager/tests/fixtures/pull_metadata_existent_db_test/: filters1.json  filters2.json  filters_i18n.json
(+265 files in other folders)
