[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
homepage = "https://adguard.com"
license-file = "LICENSE"
repository = "https://github.com/AdguardTeam/FilterListManager"

[workspace.dependencies]
uniffi = { version = "0.25.0", features = ["build", "cli"] }
regex = "1.10.2"
thiserror = "1.0.61"
security-framework = "=2.11.1" # 2.11.0 is broken with codegen-units=1

[profile.release]
lto = "thin"
debug = true
opt-level = "z"
panic = "abort"
codegen-units = 1
