[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
homepage = "https://adguard.com"
license-file = "LICENSE"
repository = "https://github.com/AdguardTeam/FilterListManager"

[workspace.dependencies]
regex = "1.10.2"
thiserror = "1.0.61"

[profile.release]
lto = "thin"
debug = true
opt-level = "s"
panic = "abort"
codegen-units = 1
