[package]
name = "adguard-flm-cli"
version = "0.0.11"
edition = "2021"
homepage.workspace = true
license-file.workspace = true
repository.workspace = true

[[bin]]
name = "adguard-flm-cli"

[dependencies]
clap = "4.4.8"
adguard-flm = { path = "../filter-list-manager" }
rusqlite = { version = "0.30.0", features = ["chrono", "bundled"] }
uniffi.workspace = true
regex.workspace = true
