[package]
name = "adguard-flm-ffi"
version = "0.8.24"
edition = "2021"
homepage.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Foreign function interface crate for filter list manager library"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "filter_list_manager_ffi"

[dependencies]
adguard-flm = { path = "../filter-list-manager", version = ">=0.8.13,<1.0.0", default-features = false }
thiserror.workspace = true
uniffi.workspace = true

[features]
default = ["adguard-flm/default"]
rusqlite-bundled = ["adguard-flm/rusqlite-bundled"]
rustls-tls = ["adguard-flm/rustls-tls"]

[build-dependencies]
uniffi.workspace = true
