[package]
name = "adguard-flm-ffi"
version = "2.3.1"
edition = "2021"
homepage.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Foreign function interface crate for filter list manager library"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "filter_list_manager_ffi"

[dependencies]
adguard-flm = { path = "../filter-list-manager", version = ">=2.0.0-rc.1", default-features = false }
thiserror.workspace = true
prost = "0.13.2"
enum_stringify = "0.6.0"

[features]
default = ["adguard-flm/default"]
rusqlite-bundled = ["adguard-flm/rusqlite-bundled"]
rustls-tls = ["adguard-flm/rustls-tls"]
win-res = []

[build-dependencies]
windres = "0.2"
